--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,9 @@
+# K for definition.
 unbind r
 bind r source-file ~/.config/tmux/tmux.conf
 
 set -g prefix C-a
+set -s escape-time 0
 
 setw -g mode-keys vi
 bind-key h select-pane -L 
