--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,8 +11,9 @@ bind-key j select-pane -D
 bind-key k select-pane -U 
 bind-key l select-pane -R 
 
-bind = split-window -v
-bind - split-window -h 
+bind = split-window -v -c "#{pane_current_path}"
+bind - split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 bind -r m resize-pane -Z
 bind-key b set-option status
@@ -23,6 +24,10 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'niksingh710/minimal-tmux-status'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'ofirgall/tmux-window-name'
+
+
+
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
