--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -25,6 +25,7 @@ set -g @plugin 'niksingh710/minimal-tmux-status'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin "christoomey/vim-tmux-navigator"
 set -g @plugin 'ofirgall/tmux-window-name'
+set -g @plugin 'pschmitt/tmux-ssh-split'
 
 
 
