--- a/alacritty/cyberdream.toml
+++ b/alacritty/cyberdream.toml
@@ -1,36 +1,36 @@
 # cyberdream theme for alacritty
 [[colors.indexed_colors]]
-color = "0xffbd5e"
+color = "0xd17c00"
 index = 16
 
 [[colors.indexed_colors]]
-color = "0xff6e5e"
+color = "0xd11500"
 index = 17
 
 [colors.bright]
-black = "0x3c4048"
-blue = "0x5ea1ff"
-cyan = "0x5ef1ff"
-green = "0x5eff6c"
-magenta = "0xbd5eff"
-red = "0xff6e5e"
-white = "0xffffff"
-yellow = "0xf1ff5e"
+black = "0xacacac"
+blue = "0x0057d1"
+cyan = "0x008c99"
+green = "0x008b0c"
+magenta = "0xa018ff"
+red = "0xd11500"
+white = "0x16181a"
+yellow = "0x997b00"
 
 [colors.normal]
-black = "0x16181a"
-blue = "0x5ea1ff"
-cyan = "0x5ef1ff"
-green = "0x5eff6c"
-magenta = "0xbd5eff"
-red = "0xff6e5e"
-white = "0xffffff"
-yellow = "0xf1ff5e"
+black = "0xffffff"
+blue = "0x0057d1"
+cyan = "0x008c99"
+green = "0x008b0c"
+magenta = "0xa018ff"
+red = "0xd11500"
+white = "0x16181a"
+yellow = "0x997b00"
 
 [colors.primary]
-background = "0x16181a"
-foreground = "0xffffff"
+background = "0xffffff"
+foreground = "0x16181a"
 
 [colors.selection]
-background = "0x3c4048"
-foreground = "0xffffff"
+background = "0xacacac"
+foreground = "0x16181a"
