--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,5 +1,8 @@
 import = ["~/.config/alacritty/cyberdream.toml"]
 
+[ env ]
+TERM = "xterm-256color"
+
 [window]
 
 opacity = 0.7
@@ -10,15 +13,6 @@ padding.y = 10
 
 decorations = "Buttonless"
 
-[colors.primary]
-background = "#030b16"
-foreground = "#e9def2"
-
 [font]
-
 normal.family = "Hack Nerd Font"
-bold.family = "Hack Nerd Font"
-italic.family = "Hack Nerd Font"
-bold_italic.family = "Hack Nerd Font"
-
 size = 12.0
