--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -27,6 +27,9 @@ set -g @plugin "christoomey/vim-tmux-navigator"
 set -g @plugin 'ofirgall/tmux-window-name'
 set -g @plugin 'pschmitt/tmux-ssh-split'
 
+# set -g default-terminal 'screen-256color'
+# set -as terminal-overrides ",alacritty*:Tc"
+set-option -a terminal-features 'alacritty:RGB'
 
 
 
