--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,7 +1,7 @@
 import = ["~/.config/alacritty/cyberdream.toml"]
 
-[ env ]
-TERM = "xterm-256color"
+# [ env ]
+# TERM = "xterm-256color"
 
 [window]
 
