fix colors and cmp

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,9 +2,10 @@
 unbind r
 bind r source-file ~/.config/tmux/tmux.conf
 
+set -g mouse on
 set -g prefix C-a
 set -s escape-time 0
-
+# set-option -a terminal-features 'alacritty:RGB'
 setw -g mode-keys vi
 bind-key h select-pane -L 
 bind-key j select-pane -D 
@@ -18,7 +19,8 @@ bind c new-window -c "#{pane_current_path}"
 bind -r m resize-pane -Z
 bind-key b set-option status
 
-
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_flavour "cyberdream"
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'niksingh710/minimal-tmux-status'
@@ -27,13 +29,11 @@ set -g @plugin "christoomey/vim-tmux-navigator"
 set -g @plugin 'ofirgall/tmux-window-name'
 set -g @plugin 'pschmitt/tmux-ssh-split'
 
-# set -g default-terminal 'screen-256color'
-# set -as terminal-overrides ",alacritty*:Tc"
-set-option -a terminal-features 'alacritty:RGB'
-
+set -g default-terminal "alacritty"
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # colored underscores
+set -as terminal-overrides ',alacritty:RGB' # true-color support
 
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
-set -g mouse on
